fixed layout issues

--- a/public/project/client/css/landing-page.css
+++ b/public/project/client/css/landing-page.css
@@ -17,7 +17,8 @@
 **********************/
 html,
 body {
-  height: 100%;
+    height:100%;
+    min-height:100%
 }
 
 /*********************
